Getting set up. First set of Repository / IRepository classes and interfaces framed and fixed build errors

--- a/Curry/Pages/_ViewImports.cshtml
+++ b/Curry/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
 @using Curry
-@using Curry.Data
+@using Curry.DataAccess.Data
 @namespace Curry.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
