--- a/Curry/Pages/_ViewImports.cshtml
+++ b/Curry/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
 @using Curry
-@using Curry.DataAccess.Data
+@using Curry.DataAccess
 @namespace Curry.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
