--- a/Curry/Pages/Shared/_Layout.cshtml
+++ b/Curry/Pages/Shared/_Layout.cshtml
@@ -62,6 +62,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
