--- a/Curry/Pages/Admin/Category/Index.cshtml
+++ b/Curry/Pages/Admin/Category/Index.cshtml
@@ -7,7 +7,7 @@
                 <h2 class="text-primary">Category List</h2>
             </div>
             <div class="col-md-6 text-right">
-                <a asp-page="upsert" class="btn btn-primary"><i class="fas fa-plus"></i>&nbsp;Create New</a>
+                <a asp-page="upsert" class="btn btn-primary m-3"><i class="fas fa-plus"></i>&nbsp;Create New</a>
             </div>
         </div>
         <br /> <br />
