--- a/Curry/Pages/Admin/FoodType/Index.cshtml
+++ b/Curry/Pages/Admin/FoodType/Index.cshtml
@@ -14,7 +14,7 @@
                <table id="DT_Load" class="table table-striped table-bordered" style="width:100%">
                    <thead>
                        <tr>
-                           <th>Category Name</th>
+                           <th>Food Type</th>
                            <th></th>
                        </tr>
                    </thead>
