--- a/Curry/Pages/Admin/FoodType/Upsert.cshtml
+++ b/Curry/Pages/Admin/FoodType/Upsert.cshtml
@@ -1,35 +1,25 @@
 ﻿@page
-@model Curry.Pages.Admin.Category.UpsertModel
+@model Curry.Pages.Admin.FoodType.UpsertModel
 
 <form method="post" asp-action="Upsert">
     <div class="container">
         <div class="row px-2 mx-2 bg-white border">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @if(Model.CategoryObj.Id != 0)
+            @if(Model.FoodTypeObj.Id != 0)
             {
-                <input type="hidden" asp-for="CategoryObj.Id" />
+                <input type="hidden" asp-for="FoodTypeObj.Id" />
             }
             <div class="col-md-12 px-3" style="border-bottom:1px solid #325d88;">
-                <h2 class="text-primary">@(Model.CategoryObj.Id != 0 ? "Update" : "Create") Category</h2>
+                <h2 class="text-primary">@(Model.FoodTypeObj.Id != 0 ? "Update" : "Create") Food Type</h2>
             </div>
             <div class="col-md-8 pt-3">
                 <div class="row form-group">
                     <div class="col-md-3">
-                        <label asp-for="CategoryObj.Name"></label>
+                        <label asp-for="FoodTypeObj.Name"></label>
                     </div>
                     <div class="col-md-9">
-                        <input class="form-control" asp-for="CategoryObj.Name" />
-                        <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
-                    </div>
-                </div>
-
-                <div class="row form-group">
-                    <div class="col-md-3">
-                        <label asp-for="CategoryObj.DisplayOrder"></label>
-                    </div>
-                    <div class="col-md-9">
-                        <input class="form-control" asp-for="CategoryObj.DisplayOrder" />
-                        <span class="text-danger" asp-validation-for="CategoryObj.DisplayOrder"></span>
+                        <input class="form-control" asp-for="FoodTypeObj.Name" />
+                        <span class="text-danger" asp-validation-for="FoodTypeObj.Name"></span>
                     </div>
                 </div>
 
@@ -37,7 +27,7 @@
                     <div class="col-md-9 offset-3">
                         <div class="row">
                             <div class="col-md-6">
-                                <button type="submit" class="btn btn-primary form-control">@(Model.CategoryObj.Id != 0 ? "Update" : "Create")</button>
+                                <button type="submit" class="btn btn-primary form-control">@(Model.FoodTypeObj.Id != 0 ? "Update" : "Create")</button>
                             </div>
                             <div class="col-md-6">
                                 <a asp-page="./Index" class="btn btn-success form-control">Back To List</a>
