--- a/Curry/Pages/Shared/_Layout.cshtml
+++ b/Curry/Pages/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item text-black" asp-page="/Admin/Category/Index">Catetgory</a>
                                 <a class="dropdown-item text-black" asp-page="/Admin/FoodType/Index">Food Type</a>
-                                <a class="dropdown-item text-black" asp-page="/Admin/MenuItem/Index">Menu Item</a>
+                                <a class="dropdown-item text-black" asp-page="/Admin/MenuItems/Index">Menu Item</a>
                                 <a class="dropdown-item text-black" asp-page="/Admin/User/Index">User</a>
                             </div>
                         </li>
