--- a/Curry/Pages/Shared/_Layout.cshtml
+++ b/Curry/Pages/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.20/datatables.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/cdc44dxo6vevabywpwc6zrdpvf2raz1hz4lhbsdt0uwlgc2w/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
