--- a/Curry/Pages/Shared/_Layout.cshtml
+++ b/Curry/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Curry.Utility
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,20 +26,27 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropDown" data-toggle="dropdown">
-                                Admin
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item text-black" asp-page="/Admin/Category/Index">Catetgory</a>
-                                <a class="dropdown-item text-black" asp-page="/Admin/FoodType/Index">Food Type</a>
-                                <a class="dropdown-item text-black" asp-page="/Admin/MenuItems/Index">Menu Item</a>
-                                <a class="dropdown-item text-black" asp-page="/Admin/User/Index">User</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-page="/Admin/Order/ManageOrder">Manage Orders</a>
-                        </li>
+                        @if (User.IsInRole(SD.ManagerRole))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropDown" data-toggle="dropdown">
+                                    Admin
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item text-black" asp-page="/Admin/Category/Index">Catetgory</a>
+                                    <a class="dropdown-item text-black" asp-page="/Admin/FoodType/Index">Food Type</a>
+                                    <a class="dropdown-item text-black" asp-page="/Admin/MenuItems/Index">Menu Item</a>
+                                    <a class="dropdown-item text-black" asp-page="/User/Index">User</a>
+                                </div>
+                            </li>
+                        }
+
+                        @if (User.IsInRole(SD.ManagerRole) || User.IsInRole(SD.KitchenRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-page="/Admin/Order/ManageOrder">Manage Orders</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-page="/Admin/Order/OrderList">Order Deliveries</a>
                         </li>
