--- a/Curry/Pages/Admin/Category/Upsert.cshtml
+++ b/Curry/Pages/Admin/Category/Upsert.cshtml
@@ -1,52 +1,61 @@
 ﻿@page
 @model Curry.Pages.Admin.Category.UpsertModel
+@using Curry.Utility
 
-<form method="post" asp-action="Upsert">
-    <div class="container">
-        <div class="row px-2 mx-2 bg-white border">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @if(Model.CategoryObj.Id != 0)
-            {
-                <input type="hidden" asp-for="CategoryObj.Id" />
-            }
-            <div class="col-md-12 px-3" style="border-bottom:1px solid #325d88;">
-                <h2 class="text-primary">@(Model.CategoryObj.Id != 0 ? "Update" : "Create") Category</h2>
-            </div>
-            <div class="col-md-8 pt-3">
-                <div class="row form-group">
-                    <div class="col-md-3">
-                        <label asp-for="CategoryObj.Name"></label>
-                    </div>
-                    <div class="col-md-9">
-                        <input class="form-control" asp-for="CategoryObj.Name" />
-                        <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
-                    </div>
+@if (User.IsInRole(SD.ManagerRole))
+{
+    <form method="post" asp-action="Upsert">
+        <div class="container">
+            <div class="row px-2 mx-2 bg-white border">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                @if (Model.CategoryObj.Id != 0)
+                {
+                    <input type="hidden" asp-for="CategoryObj.Id" />
+                }
+                <div class="col-md-12 px-3" style="border-bottom:1px solid #325d88;">
+                    <h2 class="text-primary">@(Model.CategoryObj.Id != 0 ? "Update" : "Create") Category</h2>
                 </div>
-
-                <div class="row form-group">
-                    <div class="col-md-3">
-                        <label asp-for="CategoryObj.DisplayOrder"></label>
+                <div class="col-md-8 pt-3">
+                    <div class="row form-group">
+                        <div class="col-md-3">
+                            <label asp-for="CategoryObj.Name"></label>
+                        </div>
+                        <div class="col-md-9">
+                            <input class="form-control" asp-for="CategoryObj.Name" />
+                            <span class="text-danger" asp-validation-for="CategoryObj.Name"></span>
+                        </div>
                     </div>
-                    <div class="col-md-9">
-                        <input class="form-control" asp-for="CategoryObj.DisplayOrder" />
-                        <span class="text-danger" asp-validation-for="CategoryObj.DisplayOrder"></span>
-                    </div>
-                </div>
 
-                <div class="row form-group">
-                    <div class="col-md-9 offset-3">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <button type="submit" class="btn btn-primary form-control">@(Model.CategoryObj.Id != 0 ? "Update" : "Create")</button>
-                            </div>
-                            <div class="col-md-6">
-                                <a asp-page="./Index" class="btn btn-success form-control">Back To List</a>
+                    <div class="row form-group">
+                        <div class="col-md-3">
+                            <label asp-for="CategoryObj.DisplayOrder"></label>
+                        </div>
+                        <div class="col-md-9">
+                            <input class="form-control" asp-for="CategoryObj.DisplayOrder" />
+                            <span class="text-danger" asp-validation-for="CategoryObj.DisplayOrder"></span>
+                        </div>
+                    </div>
+
+                    <div class="row form-group">
+                        <div class="col-md-9 offset-3">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <button type="submit" class="btn btn-primary form-control">@(Model.CategoryObj.Id != 0 ? "Update" : "Create")</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <a asp-page="./Index" class="btn btn-success form-control">Back To List</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </form>
+}
+else
+{
+    <div>
+        <h1 class="danger">Access Denied</h1>
     </div>
-</form>
-
+}
