--- a/Curry/Pages/Admin/FoodType/Index.cshtml
+++ b/Curry/Pages/Admin/FoodType/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
 @model Curry.Pages.Admin.FoodType.IndexModel
 
+@using Curry.Utility
+@if (User.IsInRole(SD.ManagerRole))
+{
     <div class="bg-white container border">
         <div class="row">
             <div class="col-md-6">
@@ -11,16 +14,22 @@
             </div>
         </div>
         <br /> <br />
-               <table id="DT_Load" class="table table-striped table-bordered" style="width:100%">
-                   <thead>
-                       <tr>
-                           <th>Food Type</th>
-                           <th></th>
-                       </tr>
-                   </thead>
-               </table>
+        <table id="DT_Load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Food Type</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
     </div>
-
+}
+else
+{
+    <div>
+        <h1 class="danger">Access Denied</h1>
+    </div>
+}
 @section Scripts {
-<script src="~/js/foodType.js"></script>
+    <script src="~/js/foodType.js"></script>
 }
