--- a/Curry/Pages/Shared/_Layout.cshtml
+++ b/Curry/Pages/Shared/_Layout.cshtml
@@ -47,9 +47,12 @@
                                 <a class="nav-link text-white" asp-page="/Admin/Order/ManageOrder">Manage Orders</a>
                             </li>
                         }
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-page="/Admin/Order/OrderList">Order Deliveries</a>
-                        </li>
+                        @if (User.IsInRole(SD.ManagerRole) || User.IsInRole(SD.DriverRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-page="/Admin/Order/OrderList">Order Deliveries</a>
+                            </li>
+                        }
                         <li>
                             <a class="nav-link text-white" asp-page="/Customer/Cart/Index"><i class="fas fa-shopping-cart">&nbsp; (0)</i></a>
                         </li>
