--- a/Curry/Pages/User/Index.cshtml
+++ b/Curry/Pages/User/Index.cshtml
@@ -1,28 +1,37 @@
 ﻿@page
+@using Curry.Utility
 
-<div class="bg-white container border">
-    <div class="row">
-        <div class="col-md-6">
-            <h2 class="text-primary">User List</h2>
+@if (User.IsInRole(SD.ManagerRole))
+{
+    <div class="bg-white container border">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="text-primary">User List</h2>
+            </div>
+            <div class="col-md-6 text-right">
+                <a asp-page="/Account/Register" asp-area="Identity" class="btn btn-primary m-3"><i class="fas fa-plus"></i>&nbsp;Create New</a>
+            </div>
         </div>
-        <div class="col-md-6 text-right">
-            <a asp-page="/Account/Register" asp-area="Identity" class="btn btn-primary m-3"><i class="fas fa-plus"></i>&nbsp;Create New</a>
-        </div>
+        <br /> <br />
+        <table id="DT_Load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Full Name</th>
+                    <th>Email</th>
+                    <th>Phone Number</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
     </div>
-    <br /> <br />
-    <table id="DT_Load" class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Full Name</th>
-                <th>Email</th>
-                <th>Phone Number</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-    </table>
-</div>
-
+}
+else
+{
+    <div>
+        <h1 class="danger">Access Denied</h1>
+    </div>
+}
 @section Scripts {
     <script src="~/js/user.js"></script>
 }
